# Pong

./: .gitignore  CMakeLists.txt  LICENSE  README.md
OpenNN/: CMakeLists.txt
OpenNN/opennn/: gradient_descent.cpp  levenberg_marquardt_algorithm.h  minkowski_error.h  quasi_newton_method.cpp
SFMLMath/: SFMLMath.hpp
data/: neuralNetworkExpressionLeft.txt  neuralNetworkExpressionRight.txt  neuralNetworkLeft.xml  neuralNetworkRight.xml
data/save/: neuralNetworkEasyLeft.xml  neuralNetworkHard2Left.xml  neuralNetworkHardLeft.xml  neuralNetworkMedium2Left.xml  neuralNetworkMediumLeft.xml
src/: Game.cpp  Game.hpp  main.cpp
src/players/: ArrowKeyPlayer.cpp  ArrowKeyPlayer.hpp  NNAI.cpp  NNAI.hpp  NNAIPlayer.cpp  NNAIPlayer.hpp  Skill.hpp  WSPlayer.cpp  WSPlayer.hpp  WallPlayer.cpp  WallPlayer.hpp
src/views/menu/: MenuView.cpp  MenuView.hpp
src/views/menuView/: MenuView.hpp
src/views/playfield/: Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp  PlayfieldView.cpp  PlayfieldView.hpp  ScoreDisplay.cpp  ScoreDisplay.hpp  Side.hpp
src/views/settings/: SettingsView.cpp  SettingsView.hpp
src/views/startScreen/: StartScreenView.cpp  StartScreenView.hpp
